# LLM-Tracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  init_commits.sh
.claude/: settings.local.json
include/: types.hpp
src/: main.cpp
src/anomaly/: detector.cpp  detector.hpp
src/buffer/: ring_buffer.cpp  ring_buffer.hpp
src/hooks/: interceptor.cpp  interceptor.hpp
src/replay/: replayer.cpp  replayer.hpp  serializer.cpp  serializer.hpp
src/simulator/: mock_model.cpp  mock_model.hpp
src/tui/: anomaly_panel.cpp  anomaly_panel.hpp  app.cpp  app.hpp  attention_panel.cpp  attention_panel.hpp  metrics_panel.cpp  metrics_panel.hpp  stream_panel.cpp  stream_panel.hpp  topology_panel.cpp  topology_panel.hpp
